# hratc2017_framework

./: .directory  CMakeLists.txt  README.md  README_old.md  hratc.rviz  hratc2014_framework.rosinstall  hratc2014_simulator.rosinstall  hratc2015_framework.rosinstall  hratc2016_framework.rosinstall  hratc2017_framework.rosinstall  package.xml
Media/: bifurcada.dae
Media/models/: BIFURCADA2.dae  BIFURCADA3.dae  BIFURCADA4.dae  BIFURCADA_VERTICAL.dae  FINAL_TRAIL.dae  FOI.dae  Untitled.dae  bifurcada.dae  bifurcada_vertical.dae
Media/models/scenarioDAE/: 1scenario.dae  2scenario.dae  3scenario.dae
controllers/: arm_control.yaml  controllers.yaml  ptu_d46_control.yaml
description/: p3at.rviz  p3at_sonar.rviz
description/sensors_meshes/: sick_tim310.stl  sick_tim551.stl
description/urdf/: common.xacro  gps_antenna.urdf.xacro  hokuyo.urdf.xacro  mti.urdf.xacro  p3at_sonar.urdf.xacro  pioneer3at.urdf  pioneer3at.urdf.xacro  pioneer3at_ptu.urdf.xacro  pioneer3at_sonar.urdf.xacro  pointgrey_flea3.urdf.xacro  ptu_d46.urdf.xacro  sick_lms100.urdf.xacro  sick_tim.urdf.xacro  sick_tim55x.urdf.xacro  sonar_sensor.urdf.xacro
description/worlds/: coordinates.txt  coordinates.yaml  flatMinefield.world  hardWavyMinefield.world  scenario0.world  scenario1.world  softWavyMinefield.world
description/worlds/models/: Bush1.dae  cornerstone.dae  minefield.dae  minefield_grass.dae  minefield_grass2.dae  minefield_grass3.dae  minefield_grass4.dae  minefield_grass5.dae  minefield_grass6.dae  minefield_unregular.dae  minefield_unregular_hard.dae  scenario2.dae
examples/: control_pantilt.py  simple_control.py
examples/old/: control_nocamera.py
include/graft/: GraftImuTopic.h  GraftOdometryTopic.h  GraftSensor.h  GraftUKFAbsolute.h
launch/: client.launch  coordinates.launch  example-empty.launch  husky.launch  outdoors.launch  p3at.launch  pointcloud_generator.launch  run_judge.launch  run_simulation.launch  run_simulation_empty.launch  run_simulation_world.launch  ukf.launch  world-empty.launch  world-park.launch  world.launch
launch/old/: husky.launch  run_simulation_empty.launch
models/arm/: arm_axel.STL  base_arm_link.STL  lower_arm.STL  metal_detector_antenna.STL  metal_detector_arm.STL  upper_arm.STL
models/fsr_husky_parts/: bridge.STL  bridge.stl  front_cover.STL  gps_antenna.stl  tilt_base.dae  tilt_base_link.STL  tilt_link.STL  tim55x.STL  top_cover.STL
scripts/: minefield_to_odom_tf.py
settings/: Change_Minefield  Change_Minefield.cpp  GPScoordinates.yaml  global_localization.yaml  judge.yaml  judge_old.yaml  links.yaml  minefield.yaml  minefield_not_rectangular.yaml
settings/minefield/: 1in.txt  1minefield.yaml  1out.txt  2in.txt  2minefield.yaml  2out.txt  3in.txt  3out.txt  4in.txt  4minefield.yaml
src/: arm_controller.cpp
src/UTMConverter/: UTMConverter.cpp  UTMConverter.h  convert_coordinates.cpp
src/coilSignalSimulator/: CoilSignalSimulator.cpp  CoilSignalSimulator.h  coilSignalSimulator.py  main.cpp  minemapgenerator.py
src/coilSignalSimulator/Metal01/: coilLch1.csv  coilMch0.csv  coilMch1.csv  coilMch2.csv  coilRch0.csv
src/coilSignalSimulator/Metal02/: coilMch1.csv  coilMch2.csv
src/coilSignalSimulator/Mine01/: coilMch2.csv  coilRch1.csv  coilRch2.csv
src/coilSignalSimulator/updateConfigINI/: main.cpp
src/config/: config.cpp  config.h  config.ini  robotPose.cpp  robotPose.h  trueRobotPose.cpp  trueRobotPose.h
src/gazebo_gps_plugin/: gazebo_ros_gps.cpp
src/gazebo_mimic_plugin/: mimic_plugin.cpp
src/gps_to_odom/: gps_to_odom.cpp
src/graft_ukf_absolute/: GraftImuTopic.cpp  GraftOdometryTopic.cpp  GraftUKFAbsolute.cpp  graft_ukf_absolute.cpp
src/judge/: config.cpp  config.h  judge.cpp  judge.h  main.cpp  phihratc.rviz  robotPose.cpp  robotPose.h
src/minefieldViewer/: main.cpp  minefieldviewer.cpp  minefieldviewer.h
src/minefield_static_tf_publisher/: minefield_static_tf_publisher.cpp
src/pcl_generator/: pointcloud_generator.cpp
src/simulator/: config.ini  simulator.py
src/simulator/core/: coilSignalSimulator.py  config.py  judgedredd.py  minemapgenerator.py
src/simulator/core/Metal01/: coilLch0.csv  coilLch2.csv  coilRch1.csv  coilRch2.csv
src/simulator/core/Metal02/: coilLch0.csv  coilLch1.csv  coilLch2.csv  coilMch0.csv  coilRch0.csv  coilRch1.csv  coilRch2.csv
src/simulator/core/Mine01/: coilLch0.csv  coilLch1.csv  coilLch2.csv  coilMch0.csv  coilMch1.csv  coilRch0.csv
src/simulator/gui/: credits.py  mineconfig.py  minewindow.py  newcompetitor.py
src/simulator/gui/ui/: credits.py  credits.ui  mainwindow.py  mainwindow.ui  mineconfig_ui.py  mineconfig_ui.ui  minefieldapplication.ui  newCompetitorDialog.py  newCompetitorDialog.ui  resource.qrc  resource_rc.py
urdf/: gps.urdf.xacro  husky.urdf.xacro  minefield.urdf.xacro
urdf/arm/: fsr_husky_arm.urdf.xacro
urdf/fsr_husky_parts/: alfa_tube2h.urdf.xacro  front_cover.urdf.xacro  gps_antenna.urdf.xacro  husky_bridge.urdf.xacro  mti.urdf.xacro  pointgrey_flea3.urdf.xacro  ptu_d46.urdf.xacro  sick_lms100.urdf.xacro  tilt.urdf.xacro  tim55x.urdf.xacro  top_cover.urdf.xacro
urdf/husky_parts/: parts.urdf.xacro  wheel.urdf.xacro
worlds/: outdoors.world  scenario1.world  scenario2.world
