<?xml version="1.0"?>
<package>
  
  <name>hratc2014_framework</name>
  <version>0.0.0</version>
  <description>The hratc2014_framework package.</description>

  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>
  <maintainer email="florabranchi@gmail.com">Flora Franzon Branchi</maintainer>
  <maintainer email="rqmaffei@gmail.com">Renan de Queiros Maffei</maintainer>
  <maintainer email="vitor_mj@yahoo.com">Vitor Augusto Machado Jorge</maintainer>
  <maintainer email="guilhermefrancosi@gmail.com">Guilherme Schvarcz Franco</maintainer>

  <license>BSD</license>
  <url type="website">http://www.isr.uc.pt/~embedded/events/HRATC2014</url>
  <author email="goncabrita@gmail.com">Gonçalo Cabrita</author>
  <author email="florabranchi@gmail.com">Flora Franzon Branchi</author>
  <author email="rqmaffei@gmail.com">Renan de Queiros Maffei</author>
  <author email="vitor_mj@yahoo.com">Vitor Augusto Machado Jorge</author>
  <author email="guilhermefrancosi@gmail.com">Guilherme Schvarcz Franco</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>husky_gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>metal_detector_msgs</run_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
  
</package>
